PostGIS 2.3.6
2018/xx/xx

  * Bug Fixes and Enhancements

  - #3713, Support encodings that happen to output a '\' character
  - #3965, ST_ClusterKMeans used to lose some clusters on initialization
           (Darafei Praliaskouski)
  - #3956, Brin opclass object does not upgrade properly (Sandro Santilli)

PostGIS 2.3.5
2017/11/15

  * Bug Fixes and Enhancements

  - #3667, Fix for bug in geography ST_Segmentize
  - #3926, Add missing 2.2.6 upgrade path

PostGIS 2.3.4
2017/10/18

  * Bug Fixes and Enhancements

  - PostgreSQL 10 support
  - #3782, Memory leak in lwline_from_wkb_state (Even Rouault)
  - #3101, Fix buffer overflow in pgsql2shp (Sandro Santilli)
  - #3786, ptarray null and heap issues on is_closed
  - #3795, Solaris build issues due to missing isfinite define
           (Julian Schauder)
  - #3792, mark all 3D related including SFCGAL as parallel safe
  - #3800, shp2pgql-gui allow export of foreign tables, materialized views,
           and partitioned tables
  - #3806, Reverse geocoder missing suffix direction when present
  - #3698, loading census tabblock is broken
  - #3839, loader tests sometimes crash because of variables not initialized
            also reenable cunit loader tess to always run.
  - #3774, Trigonometric length for CompoundCurves
  - #3731, Crash on very small table of homogenous data
  - #2836, Receiving ERROR: ExteriorRing: geom is
           not a polygon with ST_ConcaveHull
  - #3781, Not-quite curved CurvePolygon rejected by ST_Contains
  - #3818, Triangles unclosed in M should be parseable
  - #3866, Rare crash generating TWKB with large coordinate values
  - #3869, Fix build with "gold" linker
  - #3845, Gracefully handle short-measure issue
  - #3879, Division by zero in some arc cases
  - #3878, Single defn of signum in header
  - #3880, Undefined behaviour in TYPMOD_GET_SRID
  - #3875, Fix undefined behaviour in shift operation
  - #3874, lw_dist2d_pt_arc division by zero